# git-multi-hub

./: MANIFEST.in  README.md  pyproject.toml
src/: __init__.py  __main__.py
src/gmh/: __init__.py  __main__.py  config.py  config.toml
